# CL-Filesystem-Virtualization

./: CMakeLists.txt  README.md  main.cpp
Functions/: Commands.cpp  Commands.h  MyFunctions.cpp  MyFunctions.hpp
Structures/: Datastream.cpp  Datastream.h  DirData.cpp  DirData.h  Metadata.cpp  Metadata.h  MyStructures.hpp  Superblock.cpp  Superblock.h
